# sdm_vocab

./: .gitignore  README.md  pyproject.toml
data/: sdm_vocab.csv
notebooks/: sdm_vocab.ipynb
outputs/: sdm_vocab.ttl
src/: main.py
